@@ -2,6 +2,8 @@ dev
 
 * Render blueprints inside form (thanks taavo)
 * Make generated ids easily overridable in jQuery version (thanks ghostganz)
+* Support `nested_wrapper` option as an alternative to `wrapper` option in
+order to maintain compatibility with `simple_fields_for` helper (#219)
 
 0.3.1 (November 5, 2012)
 
